The @TechRequired is for RP-0

--- a/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_RealismOverhaul.cfg
+++ b/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_RealismOverhaul.cfg
@@ -4,7 +4,11 @@
 @PART[AblativeAirbrake]:FOR[Ablative-Airbrake]:NEEDS[RealismOverhaul]
 {
 	%RSSROConfig = True
-	@TechRequired = advancedUncrewedLanding
 	%maxTemp = 1500
 	%skinMaxTemp = 2600
+}
+
+@PART[AblativeAirbrake]:FOR[Ablative-Airbrake]:NEEDS[RP-0]
+{
+	@TechRequired = advancedUncrewedLanding
 }
