Desktop to github v1.0.0

--- a/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_RealismOverhaul.cfg
+++ b/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_RealismOverhaul.cfg
@@ -1,5 +1,6 @@
 // Module Manager patch for "Ablative-Airbrake" to be compatible with "Realism Overhaul".
 // Need the mod "Module Manager" to work.
+//Author:  Gordon-Dry
 
 @PART[AblativeAirbrake]:FOR[Ablative-Airbrake]:NEEDS[RealismOverhaul]
 {
