--- a/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_TweakScale.cfg
+++ b/GameData/Ablative-Airbrake/ModuleManager_Patches/MM_TweakScale.cfg
@@ -1,5 +1,6 @@
 // Module Manager patch for "Ablative-Airbrake" to be compatible with "TweakScale".
-// Need the mod "Module Manager" to work.
+// Needs the mod "Module Manager" to work.
+//Author:Marcelo Silveira
 
 @PART[AblativeAirbrake]:FOR[Ablative-Airbrake]:NEEDS[TweakScale]
 {
