--- a/GameData/Ablative-Airbrake/Patches/MM_TweakScale.cfg
+++ b/GameData/Ablative-Airbrake/Patches/MM_TweakScale.cfg
@@ -1,6 +1,6 @@
 // Module Manager patch for "Ablative-Airbrake" to be compatible with "TweakScale".
 // Needs the mod "Module Manager" to work.
-//Author:Marcelo Silveira
+//Author:Marcelo Silveira, Skalou
 
 @PART[AblativeAirbrake]:FOR[Ablative-Airbrake]:NEEDS[TweakScale]
 {
@@ -8,5 +8,14 @@
 	{
 		name = TweakScale
 		type = free_square
+	}
+	// Remove cost and mass modifier for part variants when TweakScale is installed because of bugs.
+	@MODULE[ModulePartVariants]
+	{
+		@VARIANT,*
+		{
+			-cost = dummy
+			-mass = dummy
+		}
 	}
 }
